# medseg-lab

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
configs/: ablation_study.yaml  binary.yaml  disk_r3.yaml  fastsam3d.yaml  gaussian_s3.yaml
configs/unetr/: btcv.yaml
data/: __init__.py  lits_dataset.py  prompt_simulator.py
docs/progress/: 2025-10-05-unetr-btcv.md
lightning_logs/version_0/: hparams.yaml
models/: __init__.py  fastsam3d_interactive.py  unet3d_interactive.py
prompt_encoders/: __init__.py  base_encoder.py  binary_encoder.py  disk_encoder.py  gaussian_encoder.py  geodesic_encoder.py  sam_encoder.py
src/medseglab/data/: synthetic.py
src/medseglab/engine/: train.py
src/medseglab/models/: unetr.py
tests/: test_cpu_smoke.py
tools/: run_ablation.py  test_components.py  train.py
utils/: __init__.py  losses.py  metrics.py
