[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "medseg-lab"
version = "0.1.0"
description = "Medical image segmentation training and evaluation framework using MONAI and PyTorch Lightning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "torch==2.3.0",
  "torchvision==0.18.0",
  "pytorch-lightning==2.2.1",
  "monai==1.3.0",
  "scipy==1.13.0",
  "numpy==1.26.4"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/medseglab"]
