[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "interactive-segmentation"
version = "0.1.0"
description = "Interactive 3D medical image segmentation with multiple prompt encoding methods"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.21.0",
  "scipy>=1.7.0",
  "nibabel>=3.2.0",
  "PyYAML>=6.0",
  "tqdm>=4.62.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["prompt_encoders", "data", "models", "utils"]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]
geodesic = [
  "GeodisTK>=0.1.6",
]